Fix overflow problem in mobil

--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ header {
     grid-column: span 4;
     /* min-height: 10vh; */
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(370px, 1fr));
     grid-auto-rows: minmax(6vh, 10vh);
 }
 
@@ -123,7 +123,7 @@ main {
 
 .main-content {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(370px, 1fr));
     /* grid-template-columns: repeat(2, 1fr); */
     /* grid-template-rows: 1fr auto auto; */
     /* grid-column-gap: 1em; */
